--- a/changelog
+++ b/changelog
@@ -15,6 +15,9 @@ samba (3.9.0+SVN12692-1) UNRELEASED; urgency=low
       syncs with us.
     * Removed debmake comment, it's hardly relevant any more.
     * Remove redundant "package=samba" variable.
+    * Do "make pch all" instead of "make proto ; -make pch ; make all"; proto
+      is redundant when using the pch target (and since we're more or less
+      guaranteed a recent gcc version, the pch target shouldn't fail).
 
   * debian/control changes:
     * Copied Uploaders: line from Samba 3 packaging, adding myself.
@@ -41,7 +44,7 @@ samba (3.9.0+SVN12692-1) UNRELEASED; urgency=low
     versions of Samba 4 won't die when the parent is killed.
   * Updated README.debian somewhat, and renamed to use a capital D.
 
- -- Steinar H. Gunderson <sesse@debian.org>  Wed,  4 Jan 2006 01:50:11 +0100
+ -- Steinar H. Gunderson <sesse@debian.org>  Wed,  4 Jan 2006 16:55:23 +0100
 
 samba (3.9.0+SVN12395-1) unstable; urgency=low
 
