--- a/changelog
+++ b/changelog
@@ -23,7 +23,8 @@ samba (3.9.0+SVN12692-1) UNRELEASED; urgency=low
 
   * debian/control changes:
     * Copied Uploaders: line from Samba 3 packaging, adding myself.
-    * Make samba-client Replaces/Conflicts smbclient.
+    * Rename samba-client package to samba-clients.
+    * Make samba-clients Replaces/Conflicts smbclient.
     * Add build-dependency on autoconf, it's needed for a clean build from
       SVN.
 
