Remove autogen.sh call from configure; it should be done in the upstream tarball, not in maintainer scripts.
Update README.building accordingly.


git-svn-id: svn://svn.debian.org/svn/pkg-samba/branches/samba4@874 fc4039ab-9d04-0410-8cac-899223bdd6b0

--- a/changelog
+++ b/changelog
@@ -25,8 +25,8 @@ samba (3.9.0+SVN12692-1) UNRELEASED; urgency=low
     * Copied Uploaders: line from Samba 3 packaging, adding myself.
     * Rename samba-client package to samba-clients.
     * Make samba-clients Replaces/Conflicts smbclient.
-    * Add build-dependency on autoconf, it's needed for a clean build from
-      SVN.
+    * Remove autogen.sh call from configure; it should be done in the
+      upstream tarball, not in maintainer scripts.
 
   * Maintainer script changes:
     * Attempt to upgrade from Samba 3 if that's what the user tries to do.
