Change the order of the makes _yet again_; this time, I've verified that "make -C source pch all" does indeed break, while "make -C source pch ; make -C source all" seems to work, so I'm killing the proto part and splitting them again.
git-svn-id: svn://svn.debian.org/svn/pkg-samba/branches/samba4@879 fc4039ab-9d04-0410-8cac-899223bdd6b0

--- a/changelog
+++ b/changelog
@@ -15,10 +15,9 @@ samba (3.9.0+SVN12692-1) UNRELEASED; urgency=low
       syncs with us.
     * Removed debmake comment, it's hardly relevant any more.
     * Remove redundant "package=samba" variable.
-    * Do "make proto pch all" instead of "make proto ; -make pch ; make all";
-      proto should be redundant when using the pch target and will be removed
-      in the future (but its removal triggers a build system bug currently).
-      Since we're more or less guaranteed a recent gcc version, the pch target
+    * Do "make pch ; make all" instead of "make proto ; -make pch ; make all";
+      some build system bug prevents us from just doing "make pch all", but
+      since we're more or less guaranteed a recent gcc version, the pch target
       shouldn't fail, so we won't allow it to.
 
   * debian/control changes:
