Move the samba binary package to the top, so it's the one receiving the README.* files, among others.
git-svn-id: svn://svn.debian.org/svn/pkg-samba/branches/samba4@887 fc4039ab-9d04-0410-8cac-899223bdd6b0

--- a/changelog
+++ b/changelog
@@ -30,6 +30,8 @@ samba (3.9.0+SVN12692-1) UNRELEASED; urgency=low
     * Make samba-clients Replaces/Conflicts smbclient.
     * Build-depend on docbook-xml, not just docbook-xsl -- the documentation
       needs data from both to build.
+    * Move the samba binary package to the top, so it's the one receiving
+      the README.* files, among others.
 
   * Maintainer script changes:
     * Attempt to upgrade from Samba 3 if that's what the user tries to do.
@@ -60,10 +62,10 @@ samba (3.9.0+SVN12692-1) UNRELEASED; urgency=low
   * Updated README.debian somewhat, and renamed to use a capital D.
   * Rewritten README.building, to reflect the magic that has to be done
     with the package in another repository.
-  * Update po/POTFILES.in to reflect name change (from samba4-server -> 
+  * Update po/POTFILES.in to reflect name change (from samba4-server ->
     samba-server -> samba).
 
- -- Steinar H. Gunderson <sesse@debian.org>  Thu,  5 Jan 2006 18:06:08 +0100
+ -- Steinar H. Gunderson <sesse@debian.org>  Thu,  5 Jan 2006 18:14:21 +0100
 
 samba (3.9.0+SVN12395-1) unstable; urgency=low
 
