--- a/changelog
+++ b/changelog
@@ -1,8 +1,10 @@
 samba (3.0.21a-2) UNRELEASED; urgency=low
 
-  *
+  [ Christian Perrier ]
+  * Switch to quilt for patches management. Refresh all patches so
+    that they apply cleanly. Closes: #345557
 
- -- Noèl Köthe <noel@debian.org>  Sun, 01 Jan 2006 16:45:33 +0100
+ -- Christian Perrier <bubulle@debian.org>  Thu,  5 Jan 2006 19:10:38 +0100
 
 samba (3.0.21a-1) unstable; urgency=low
 
