Add a missing db_stop in samba.postinst, probably causing problems starting the daemon in some cases.
git-svn-id: svn://svn.debian.org/svn/pkg-samba/branches/samba4@897 fc4039ab-9d04-0410-8cac-899223bdd6b0

--- a/changelog
+++ b/changelog
@@ -2,6 +2,8 @@ samba (3.9.0+SVN12727-1) UNRELEASED; urgency=low
 
   * Move /usr/lib/samba/setup from samba-common to samba. 
     * Make samba replace samba-common (<= 3.9.0+SVN12726-1)
+  * Add a missing db_stop in samba.postinst, probably causing problems
+    starting the daemon in some cases.
 
  -- Steinar H. Gunderson <sesse@debian.org>  Thu,  5 Jan 2006 23:41:19 +0100
 
