--- a/changelog
+++ b/changelog
@@ -7,7 +7,8 @@ samba (3.9.0+SVN12727-1) UNRELEASED; urgency=low
   * Add orphan files from /usr/bin (and relevant manpages) into their
     correct packages:
     * ldb-tools: ldbrename, ldbtest, oLschema2ldif.
-    * samba-clients: getntacl, ntlm_auth.
+    * samba: ntlm_auth.
+    * samba-clients: getntacl.
     * samba-gtk-frontends: gwcrontab.
     * winregistry-tools: winreg.
     * samba3dump and tdbtorture remain orphans.
