--- a/changelog
+++ b/changelog
@@ -1,6 +1,6 @@
 samba (3.9.0+SVN12727-1) UNRELEASED; urgency=low
 
-  * Move /usr/lib/samba/setup from samba-common to samba. 
+  * Move /usr/lib/samba/setup from samba-common to samba.
     * Make samba replace samba-common (<= 3.9.0+SVN12726-1)
   * Add a missing db_stop in samba.postinst, probably causing problems
     starting the daemon in some cases.
@@ -23,8 +23,10 @@ samba (3.9.0+SVN12727-1) UNRELEASED; urgency=low
   * Removed unused file samba.conffiles.
   * Run dh_installdebconf on architecture-independent packages as well, now
     that samba-common has a config script.
+  * Let samba-clients conflict/replace samba-common (<< 3.9.0), as they share
+    /usr/bin/net. 
 
- -- Steinar H. Gunderson <sesse@debian.org>  Thu,  5 Jan 2006 23:41:19 +0100
+ -- Steinar H. Gunderson <sesse@debian.org>  Fri,  6 Jan 2006 03:52:24 +0100
 
 samba (3.9.0+SVN12726-1) experimental; urgency=low
 
