--- a/changelog
+++ b/changelog
@@ -1,4 +1,4 @@
-samba (3.9.0+SVN12727-1) UNRELEASED; urgency=low
+samba (3.9.0+SVN12739-1) experimental; urgency=low
 
   * Move /usr/lib/samba/setup from samba-common to samba.
     * Make samba replace samba-common (<= 3.9.0+SVN12726-1)
