--- a/changelog
+++ b/changelog
@@ -1,4 +1,4 @@
-samba (3.9.0+SVN12727-1) UNRELEASED; urgency=low
+samba (3.9.0+SVN12739-1) experimental; urgency=low
 
   * Move /usr/lib/samba/setup from samba-common to samba.
     * Make samba replace samba-common (<= 3.9.0+SVN12726-1)
@@ -12,6 +12,9 @@ samba (3.9.0+SVN12727-1) UNRELEASED; urgency=low
     * samba-gtk-frontends: gwcrontab.
     * winregistry-tools: winreg.
     * samba3dump and tdbtorture remain orphans.
+  * Add new executable /usr/bin/testparm to samba package.
+    * Add /var/lib/samba directory to samba package; it's needed by
+      testparm.
   * Rewrite configuration/bootstrapping to be able to install the client
     only and still get a usable smb.conf. The basic idea is:
     * samba-common looks for an smb.conf. If there is none, it asks for
@@ -24,9 +27,9 @@ samba (3.9.0+SVN12727-1) UNRELEASED; urgency=low
   * Run dh_installdebconf on architecture-independent packages as well, now
     that samba-common has a config script.
   * Let samba-clients conflict/replace samba-common (<< 3.9.0), as they share
-    /usr/bin/net. 
+    /usr/bin/net.
 
- -- Steinar H. Gunderson <sesse@debian.org>  Fri,  6 Jan 2006 03:52:24 +0100
+ -- Steinar H. Gunderson <sesse@debian.org>  Fri,  6 Jan 2006 14:25:50 +0100
 
 samba (3.9.0+SVN12726-1) experimental; urgency=low
 
