Prepare changelog for next release.
git-svn-id: svn://svn.debian.org/svn/pkg-samba/branches/samba4@919 fc4039ab-9d04-0410-8cac-899223bdd6b0

--- a/changelog
+++ b/changelog
@@ -1,3 +1,9 @@
+samba (3.9.0+SVN12743-1) experimental; urgency=low
+
+  * 
+
+ -- Steinar H. Gunderson <sesse@debian.org>  Fri,  6 Jan 2006 18:27:09 +0100
+
 samba (3.9.0+SVN12739-1) experimental; urgency=low
 
   * Move /usr/lib/samba/setup from samba-common to samba.
