--- a/changelog
+++ b/changelog
@@ -1,6 +1,8 @@
 samba (3.9.0+SVN12743-1) experimental; urgency=low
 
-  * 
+  * Move testparm from samba into samba-common.
+    * Make samba-common Architecture: any.
+    * Make samba-common replace/conflict samba (<= 3.9.0+SVN12739-1).
 
  -- Steinar H. Gunderson <sesse@debian.org>  Fri,  6 Jan 2006 18:27:09 +0100
 
