--- a/changelog
+++ b/changelog
@@ -3,8 +3,9 @@ samba (3.9.0+SVN12743-1) experimental; urgency=low
   * Move testparm from samba into samba-common.
     * Make samba-common Architecture: any.
     * Make samba-common replace/conflict samba (<= 3.9.0+SVN12739-1).
+  * Make samba-clients depend on samba-common. 
 
- -- Steinar H. Gunderson <sesse@debian.org>  Fri,  6 Jan 2006 18:27:09 +0100
+ -- Steinar H. Gunderson <sesse@debian.org>  Fri,  6 Jan 2006 18:35:32 +0100
 
 samba (3.9.0+SVN12739-1) experimental; urgency=low
 
