--- a/changelog
+++ b/changelog
@@ -3,9 +3,10 @@ samba (3.9.0+SVN12743-1) experimental; urgency=low
   * Move testparm from samba into samba-common.
     * Make samba-common Architecture: any.
     * Make samba-common replace/conflict samba (<= 3.9.0+SVN12739-1).
-  * Make samba-clients depend on samba-common. 
+  * Make samba-clients depend on samba-common.
+  * Make samba-common depend on debconf.
 
- -- Steinar H. Gunderson <sesse@debian.org>  Fri,  6 Jan 2006 18:35:32 +0100
+ -- Steinar H. Gunderson <sesse@debian.org>  Sat,  7 Jan 2006 15:48:51 +0100
 
 samba (3.9.0+SVN12739-1) experimental; urgency=low
 
