Adapt machine creation script example to Debian Add series which was previously forgotten...
git-svn-id: svn://svn.debian.org/svn/pkg-samba/trunk@923 fc4039ab-9d04-0410-8cac-899223bdd6b0

--- a/changelog
+++ b/changelog
@@ -3,6 +3,8 @@ samba (3.0.21a-2) UNRELEASED; urgency=low
   [ Christian Perrier ]
   * Switch to quilt for patches management. Refresh all patches so
     that they apply cleanly. Closes: #345557
+  * debian/patches/adapt_machine_creation_script.patch:
+    - adapt example machine creation script to Debian
 
  -- Christian Perrier <bubulle@debian.org>  Thu,  5 Jan 2006 19:10:38 +0100
 
