--- a/changelog
+++ b/changelog
@@ -5,8 +5,9 @@ samba (3.9.0+SVN12743-1) experimental; urgency=low
     * Make samba-common replace/conflict samba (<= 3.9.0+SVN12739-1).
   * Make samba-clients depend on samba-common.
   * Make samba-common depend on debconf.
+  * Make all debconf dependencies have debconf-2.0 as a valid alternative.
 
- -- Steinar H. Gunderson <sesse@debian.org>  Sat,  7 Jan 2006 15:48:51 +0100
+ -- Steinar H. Gunderson <sesse@debian.org>  Sat,  7 Jan 2006 23:14:09 +0100
 
 samba (3.9.0+SVN12739-1) experimental; urgency=low
 
