--- a/changelog
+++ b/changelog
@@ -6,8 +6,9 @@ samba (3.9.0+SVN12743-1) experimental; urgency=low
   * Make samba-clients depend on samba-common.
   * Make samba-common depend on debconf.
   * Make all debconf dependencies have debconf-2.0 as a valid alternative.
+  * Include the newuser binary in samba-server package. 
 
- -- Steinar H. Gunderson <sesse@debian.org>  Sat,  7 Jan 2006 23:14:09 +0100
+ -- Steinar H. Gunderson <sesse@debian.org>  Sun,  8 Jan 2006 03:07:19 +0100
 
 samba (3.9.0+SVN12739-1) experimental; urgency=low
 
