--- a/changelog
+++ b/changelog
@@ -7,8 +7,9 @@ samba (3.9.0+SVN12743-1) experimental; urgency=low
   * Make samba-common depend on debconf.
   * Make all debconf dependencies have debconf-2.0 as a valid alternative.
   * Include the newuser binary in samba-server package.
-  * Build-Depend on libgnutls-dev, so we get SSL in the LDAP and WWW
-    servers.
+  * Add missing Build-Depends on: libgnutls-dev, libreadline5-dev,
+    libpam0g-dev. All were causing silent build failures (ie. the package
+    was simply built without the features).
 
  -- Steinar H. Gunderson <sesse@debian.org>  Tue, 10 Jan 2006 01:31:45 +0100
 
