--- a/changelog
+++ b/changelog
@@ -1,3 +1,9 @@
+samba (3.9.0+SVN12857-1) experimental; urgency=low
+
+  * 
+
+ -- Steinar H. Gunderson <sesse@debian.org>  Wed, 11 Jan 2006 23:51:25 +0100
+
 samba (3.9.0+SVN12856-1) experimental; urgency=low
 
   * New upstream version.
