--- a/changelog
+++ b/changelog
@@ -1,8 +1,11 @@
 samba (3.9.0+SVN12857-1) experimental; urgency=low
 
-  * 
+  * Add sections to binary packages to match the archive:
+    * libparse-pidl-perl: perl
+    * samba-dev: devel
+    * samba-gtk-frontends: x11
 
- -- Steinar H. Gunderson <sesse@debian.org>  Wed, 11 Jan 2006 23:51:25 +0100
+ -- Steinar H. Gunderson <sesse@debian.org>  Wed, 11 Jan 2006 23:51:59 +0100
 
 samba (3.9.0+SVN12856-1) experimental; urgency=low
 
