--- a/changelog
+++ b/changelog
@@ -5,6 +5,8 @@ samba (3.0.21a-2) UNRELEASED; urgency=low
     that they apply cleanly. Closes: #345557
   * debian/patches/adapt_machine_creation_script.patch:
     - adapt example machine creation script to Debian. Closes: #346234
+  * winbind.dirs:
+    - added /var/run/samba. Closes: #347585
 
  -- Christian Perrier <bubulle@debian.org>  Thu,  5 Jan 2006 19:10:38 +0100
 
