--- a/changelog
+++ b/changelog
@@ -1,8 +1,8 @@
 samba (3.9.0+SVN12947-1) UNRELEASED; urgency=low
 
-  * 
+  * Forward-port panic-action script from the Samba 3 packaging.
 
- -- Steinar H. Gunderson <sesse@debian.org>  Sun, 15 Jan 2006 23:00:11 +0100
+ -- Steinar H. Gunderson <sesse@debian.org>  Sun, 15 Jan 2006 23:02:55 +0100
 
 samba (3.9.0+SVN12946-1) experimental; urgency=low
 
