Include ntlm_auth.1 man page in the samba package.
git-svn-id: svn://svn.debian.org/svn/pkg-samba/branches/samba4@955 fc4039ab-9d04-0410-8cac-899223bdd6b0

--- a/changelog
+++ b/changelog
@@ -3,8 +3,9 @@ samba (3.9.0+SVN12947-1) UNRELEASED; urgency=low
   * Forward-port panic-action script from the Samba 3 packaging.
     * Patch the smb.conf template to use the panic-action script by
       default.
+  * Include ntlm_auth.1 man page in the samba package.
 
- -- Steinar H. Gunderson <sesse@debian.org>  Sun, 15 Jan 2006 23:18:14 +0100
+ -- Steinar H. Gunderson <sesse@debian.org>  Sun, 15 Jan 2006 23:36:02 +0100
 
 samba (3.9.0+SVN12946-1) experimental; urgency=low
 
