Make the samba dependency on samba-common versioned.
git-svn-id: svn://svn.debian.org/svn/pkg-samba/branches/samba4@956 fc4039ab-9d04-0410-8cac-899223bdd6b0

--- a/changelog
+++ b/changelog
@@ -4,8 +4,9 @@ samba (3.9.0+SVN12947-1) UNRELEASED; urgency=low
     * Patch the smb.conf template to use the panic-action script by
       default.
   * Include ntlm_auth.1 man page in the samba package.
+  * Make the samba dependency on samba-common versioned.
 
- -- Steinar H. Gunderson <sesse@debian.org>  Sun, 15 Jan 2006 23:36:02 +0100
+ -- Steinar H. Gunderson <sesse@debian.org>  Sun, 15 Jan 2006 23:37:26 +0100
 
 samba (3.9.0+SVN12946-1) experimental; urgency=low
 
