--- a/changelog
+++ b/changelog
@@ -12,6 +12,9 @@ samba (3.0.21a-2) UNRELEASED; urgency=low
   * swat.links:
     - file added. Closes: #346001
 
+  [ Noèl Köthe ]
+  * fixed typo in panic-script. Closes: #348410
+
  -- Christian Perrier <bubulle@debian.org>  Thu,  5 Jan 2006 19:10:38 +0100
 
 samba (3.0.21a-1) unstable; urgency=low
