--- a/changelog
+++ b/changelog
@@ -1,3 +1,9 @@
+samba (3.0.21a-3) UNRELEASED; urgency=low
+
+  * 
+
+ -- Christian Perrier <bubulle@debian.org>  Fri, 20 Jan 2006 23:15:39 +0100
+
 samba (3.0.21a-2) unstable; urgency=low
 
   [ Christian Perrier ]
