--- a/changelog
+++ b/changelog
@@ -1,8 +1,8 @@
-samba (3.0.21a-3) UNRELEASED; urgency=low
+samba (3.0.21a-3) unstable; urgency=low
 
-  * 
+  * Add Build-Depends on quilt (>= 0.40 as we use quilt.make)
 
- -- Christian Perrier <bubulle@debian.org>  Fri, 20 Jan 2006 23:15:39 +0100
+ -- Christian Perrier <bubulle@debian.org>  Sat, 21 Jan 2006 23:02:32 +0100
 
 samba (3.0.21a-2) unstable; urgency=low
 
