--- a/changelog
+++ b/changelog
@@ -1,8 +1,13 @@
 samba (3.0.21a-3) unstable; urgency=low
 
+  [ Christian Perrier ]
   * Add Build-Depends on quilt (>= 0.40 as we use quilt.make)
 
- -- Christian Perrier <bubulle@debian.org>  Sat, 21 Jan 2006 23:02:32 +0100
+  [ Peter Eisentraut ]
+  * Add umount.cifs. Closes: #340967
+  * Really make mount.cifs and umount.cifs suid root. Closes: #340966
+
+ -- Peter Eisentraut <petere@debian.org>  Sun, 22 Jan 2006 03:52:17 +0100
 
 samba (3.0.21a-2) unstable; urgency=low
 
