--- a/changelog
+++ b/changelog
@@ -1,3 +1,10 @@
+samba (3.0.21a-4) UNRELEASED; urgency=low
+
+  * Add umount.cifs. Closes: #340967
+  * Really make mount.cifs and umount.cifs suid root. Closes: #340966
+
+ -- Peter Eisentraut <petere@debian.org>  Sun, 22 Jan 2006 03:52:17 +0100
+
 samba (3.0.21a-3) unstable; urgency=low
 
   * Add Build-Depends on quilt (>= 0.40 as we use quilt.make)
