--- a/changelog
+++ b/changelog
@@ -1,9 +1,14 @@
 samba (3.0.21a-4) UNRELEASED; urgency=low
 
+  [ Peter Eisentraut ]
   * Add umount.cifs. Closes: #340967
   * Really make mount.cifs and umount.cifs suid root. Closes: #340966
 
- -- Peter Eisentraut <petere@debian.org>  Sun, 22 Jan 2006 03:52:17 +0100
+  [ Christian Perrier ]
+  * Add "bind interfaces only" and "interfaces" options (commented)
+    to the default smb.conf file. Closes: #349043
+
+ -- Christian Perrier <bubulle@debian.org>  Sun, 22 Jan 2006 14:48:27 +0100
 
 samba (3.0.21a-3) unstable; urgency=low
 
