Remove ldbtest utility.
git-svn-id: svn://svn.debian.org/svn/pkg-samba/branches/samba4@980 fc4039ab-9d04-0410-8cac-899223bdd6b0

--- a/changelog
+++ b/changelog
@@ -10,6 +10,7 @@ samba (3.9.0+SVN12947-1) UNRELEASED; urgency=low
   * Remove gwsam utility.
   * Include gwcrontab.1 and gepdump.1 man pages in the samba-gtk-frontends
     package.
+  * Remove ldbtest utility from ldb-tools package.
 
  -- Steinar H. Gunderson <sesse@debian.org>  Mon, 16 Jan 2006 00:19:30 +0100
 
