--- a/changelog
+++ b/changelog
@@ -5,7 +5,7 @@ samba (3.9.0+SVN12947-1) UNRELEASED; urgency=low
       Debian packaging) to use the panic-action script by default.
     * Patch the samba-common postinst to generate smb.conf files with the
       same setting.
-  * Include ntlm_auth.1 man page in the samba package.
+  * Include ntlm_auth.1 and smbd.8 man pages in the samba package.
   * Make the samba dependency on samba-common versioned.
   * Remove gwsam utility.
   * Include gwcrontab.1 and gepdump.1 man pages in the samba-gtk-frontends
