--- a/changelog
+++ b/changelog
@@ -1,4 +1,4 @@
-samba (3.0.21a-4) UNRELEASED; urgency=low
+samba (3.0.21a-4) unstable; urgency=low
 
   [ Peter Eisentraut ]
   * Add umount.cifs. Closes: #340967
@@ -13,7 +13,7 @@ samba (3.0.21a-4) UNRELEASED; urgency=low
     autoconf.patch, so that samba looks for files in /var/lib/samba like it's
     supposed to instead of in /var/run/samba!  Closes: #349372, #349464.
 
- -- Steve Langasek <vorlon@debian.org>  Mon, 23 Jan 2006 00:55:07 -0800
+ -- Steve Langasek <vorlon@debian.org>  Mon, 23 Jan 2006 00:59:20 -0800
 
 samba (3.0.21a-3) unstable; urgency=low
 
