--- a/changelog
+++ b/changelog
@@ -1,5 +1,8 @@
-samba (3.9.0+4.0.0-tp1) UNRELEASED; urgency=low
+samba (3.9.1+4.0.0tp1-1) experimental; urgency=low
 
+  * New upstream version (tech preview 1).
+
+  [ Steinar H. Gunderson ]
   * Forward-port panic-action script from the Samba 3 packaging.
     * Patch the smb.conf provisioning template (only used by swat in the
       Debian packaging) to use the panic-action script by default.
@@ -7,12 +10,19 @@ samba (3.9.0+4.0.0-tp1) UNRELEASED; urgency=low
       same setting.
   * Include ntlm_auth.1 and smbd.8 man pages in the samba package.
   * Make the samba dependency on samba-common versioned.
+  * Install /usr/bin/setntacl manually; the upstream install target doesn't
+    seem to do it anymore.
+  * Ask for the realm (and give it to the upgrade script) when upgrading from
+    Samba 3; it can't be easily autodetected. (Note that upgrade still seems
+    to be broken for now.)
+
+  [ Jelmer Vernooij ]
   * Remove gwsam utility.
   * Include gwcrontab.1 and gepdump.1 man pages in the samba-gtk-frontends
     package.
   * Remove ldbtest utility from ldb-tools package.
 
- -- Steinar H. Gunderson <sesse@debian.org>  Mon, 16 Jan 2006 00:19:30 +0100
+ -- Steinar H. Gunderson <sesse@debian.org>  Tue, 24 Jan 2006 16:01:59 +0100
 
 samba (3.9.0+SVN12946-1) experimental; urgency=low
 
