--- a/changelog
+++ b/changelog
@@ -1,3 +1,10 @@
+samba (3.0.21a-5) UNRELEASED; urgency=low
+
+  * Put correct paths for Debian installations into the man pages, and
+    remove outdated swat setup instructions therein. Closes: #321005
+
+ -- Peter Eisentraut <petere@debian.org>  Tue, 24 Jan 2006 23:39:24 +0100
+
 samba (3.0.21a-4) unstable; urgency=low
 
   [ Peter Eisentraut ]
