--- a/changelog
+++ b/changelog
@@ -2,8 +2,9 @@ samba (3.0.21a-5) UNRELEASED; urgency=low
 
   * Put correct paths for Debian installations into the man pages, and
     remove outdated swat setup instructions therein. Closes: #321005
+  * Fix lintian overrides and install them into the right packages.
 
- -- Peter Eisentraut <petere@debian.org>  Tue, 24 Jan 2006 23:39:24 +0100
+ -- Peter Eisentraut <petere@debian.org>  Wed, 25 Jan 2006 00:25:25 +0100
 
 samba (3.0.21a-4) unstable; urgency=low
 
