--- a/changelog
+++ b/changelog
@@ -9,8 +9,10 @@ samba (3.0.21a-5) UNRELEASED; urgency=low
   * Remove swat inetd registration in remove, not purge. Closes: #313214
   * Add findsmb script. Closes: #231806
   * Remove sonames from libnss_win{bind,s}.so. Closes: #333290
+  * Remove autoconf build dependency.
+  * Remove remnants of old patch system.
 
- -- Peter Eisentraut <petere@debian.org>  Wed, 25 Jan 2006 18:05:42 +0100
+ -- Peter Eisentraut <petere@debian.org>  Sat, 28 Jan 2006 09:04:59 +0100
 
 samba (3.0.21a-4) unstable; urgency=low
 
