Remove the symlinks and install as libnss_*.so.2.
git-svn-id: svn://svn.debian.org/svn/pkg-samba/trunk@1005 fc4039ab-9d04-0410-8cac-899223bdd6b0

--- a/changelog
+++ b/changelog
@@ -8,11 +8,11 @@ samba (3.0.21a-5) UNRELEASED; urgency=low
   * Fix lintian overrides and install them into the right packages.
   * Remove swat inetd registration in remove, not purge. Closes: #313214
   * Add findsmb script. Closes: #231806
-  * Ship symlinks to libnss_win{bind,s}.so in the package. Closes: #333290
+  * Fix sonames of libnss_win{bind,s}.so. Closes: #333290
   * Remove autoconf build dependency.
   * Remove remnants of old patch system.
 
- -- Peter Eisentraut <petere@debian.org>  Tue, 31 Jan 2006 00:56:29 +0100
+ -- Peter Eisentraut <petere@debian.org>  Tue, 31 Jan 2006 22:28:33 +0100
 
 samba (3.0.21a-4) unstable; urgency=low
 
