--- a/changelog
+++ b/changelog
@@ -11,8 +11,9 @@ samba (3.0.21a-5) UNRELEASED; urgency=low
   * Fix sonames of libnss_win{bind,s}.so. Closes: #333290
   * Remove autoconf build dependency.
   * Remove remnants of old patch system.
+  * Install smbumount setgid root. Closes: #253437
 
- -- Peter Eisentraut <petere@debian.org>  Tue, 31 Jan 2006 22:28:33 +0100
+ -- Peter Eisentraut <petere@debian.org>  Tue, 31 Jan 2006 23:48:21 +0100
 
 samba (3.0.21a-4) unstable; urgency=low
 
