--- a/changelog
+++ b/changelog
@@ -12,8 +12,9 @@ samba (3.0.21a-5) UNRELEASED; urgency=low
   * Remove autoconf build dependency.
   * Remove remnants of old patch system.
   * Install smbumount setgid root. Closes: #253437
+  * Add watch file.
 
- -- Peter Eisentraut <petere@debian.org>  Tue, 31 Jan 2006 23:48:21 +0100
+ -- Peter Eisentraut <petere@debian.org>  Wed,  1 Feb 2006 08:41:41 +0100
 
 samba (3.0.21a-4) unstable; urgency=low
 
