--- a/changelog
+++ b/changelog
@@ -14,6 +14,10 @@ samba (3.0.21a-5) UNRELEASED; urgency=low
   * Install smbumount setgid root. Closes: #253437
   * Add watch file.
 
+  [ Christian Perrier ]
+  * activate building of idmap_rid. Closes: #284681.
+    Thanks to Ubuntu patches
+
  -- Peter Eisentraut <petere@debian.org>  Wed,  1 Feb 2006 08:41:41 +0100
 
 samba (3.0.21a-4) unstable; urgency=low
